examples/fails/0/src/jif/snapp/Location.jif
package snapp;

/**
 * A point on the plane.
 */
public class Location[label THIS] {
  public final float{THIS} x;
  public final float{THIS} y;

  public Location(int{THIS} x, int{THIS} y) {
    this.x = x;
    this.y = y;
  }

}

/*
** vim: ts=2 sw=2 et cindent cino=\:0 syntax=java
*/
